Updated page content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="/main.css"></head><body><h1>Welcome to Harp.</h1><h3>This is yours to own. Enjoy.</h3></body></html>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="/main.css"></head><body><h1>Welcome to my Moon.</h1><h3>My name's Danyal and I welcome you to my GitHub page!</h3><p>Here's a little about myself: Since the day I landed on Planet Earth, I spoke in binary and 
+processed data like a number hungry abacus. Computers would be at my awe as I waved my wand
+of interrupts and +4'ed the PC registers with every swing. Well, not really, but maybe one day
+I can reach there!
+
+On a serious note, I am from Karachi, Pakistan. I speak fluent English, Urdu and a little bit of French.
+I went through O levels in The Indus Academy, A levels in Nixor College and then undergraduate in IBA, where
+I attained a degree of Bachelor of Science in Computer Science. I was initially going to be a doctor, and
+always wanted to be one almost all the way through A levels. But on December 2012, I started to re-evaluate my
+life and discovered that I would really rather pursue Computer Science. I went for it and I really do not regret 
+my decision even one bit! Also, my personality type is INFP-A (naturalist).
+
+I love playing video games of all genres. I have played wayyyyy too many games in this lifetime; it'll take 
+me forever to list all of them! But some of my classic favorites are Undertale, Dota 2, RuneScape, Soma, 
+Sonic Generations, Assassin's Creed (ALMOST ALL OF THEM), Bloodborne, Cuphead, Age of Empires 2 and Stronghold.
+
+It is my dream to one day create a video game that I am really proud of, and hopefully people will like too.
+Apart from that, I love the field of artificial intelligence and how it relates to data science. It really
+feels like a superpower! Speaking of which, I am a fan of Marvel and DC superheroes. Some of my favorite
+superheroes are Spiderman, The Flash and Batman.
+
+I also love watching animes. Some of my favorite ones are Full Metal Alchemist, Death Note, Dragon Ball Z, 
+Attack on Titan and One Punch Man.
+
+I also like reading awesome fictional novels with great plot twists. I am a huge fan of Harry Potter (I'm a Ravenclaw 
+btw).
+
+So that's me! Please do introduce yourself to me - don't be shy, I'm quite friendly. :D I always believe
+all social interaction is awkward anyways (especially first ones), so it really doesn't matter; just
+strike a conversation and go! :D</p></body></html>
