--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="/main.css"></head><body><h1>Welcome to my Moon.</h1><h3>My name's Danyal and I welcome you to my GitHub page!</h3><p>Here's a little about myself: Since the day I landed on Planet Earth, I spoke in binary and 
+<!DOCTYPE html><html><head>   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="/main.css"><script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script><script script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script></head><body><div class="container"><div class="jumbotron">   <h1>Welcome to my Moon.</h1><h3>Hi! My name's Danyal. :)</h3></div><article><p>Here's a little about myself: Since the day I landed on Planet Earth, I spoke in binary and 
 processed data like a number hungry abacus. Computers would be at my awe as I waved my wand
 of interrupts and +4'ed the PC registers with every swing. Well, not really, but maybe one day
-I can reach there!
-
-On a serious note, I am from Karachi, Pakistan. I speak fluent English, Urdu and a little bit of French.
+I can reach there!</p><p>On a serious note, I am from Karachi, Pakistan. I speak fluent English, Urdu and a little bit of French.
 I went through O levels in The Indus Academy, A levels in Nixor College and then undergraduate in IBA, where
 I attained a degree of Bachelor of Science in Computer Science. I was initially going to be a doctor, and
 always wanted to be one almost all the way through A levels. But on December 2012, I started to re-evaluate my
 life and discovered that I would really rather pursue Computer Science. I went for it and I really do not regret 
-my decision even one bit! Also, my personality type is INFP-A (naturalist).
-
-I love playing video games of all genres. I have played wayyyyy too many games in this lifetime; it'll take 
+my decision even one bit! Also, my personality type is INFP-A (naturalist).</p><p>I love playing video games of all genres. I have played wayyyyy too many games in this lifetime; it'll take 
 me forever to list all of them! But some of my classic favorites are Undertale, Dota 2, RuneScape, Soma, 
-Sonic Generations, Assassin's Creed (ALMOST ALL OF THEM), Bloodborne, Cuphead, Age of Empires 2 and Stronghold.
-
-It is my dream to one day create a video game that I am really proud of, and hopefully people will like too.
+Sonic Generations, Assassin's Creed (ALMOST ALL OF THEM), Bloodborne, Cuphead, Age of Empires 2 and Stronghold.</p><p>It is my dream to one day create a video game that I am really proud of, and hopefully people will like too.
 Apart from that, I love the field of artificial intelligence and how it relates to data science. It really
 feels like a superpower! Speaking of which, I am a fan of Marvel and DC superheroes. Some of my favorite
-superheroes are Spiderman, The Flash and Batman.
-
-I also love watching animes. Some of my favorite ones are Full Metal Alchemist, Death Note, Dragon Ball Z, 
-Attack on Titan and One Punch Man.
-
-I also like reading awesome fictional novels with great plot twists. I am a huge fan of Harry Potter (I'm a Ravenclaw 
-btw).
-
-So that's me! Please do introduce yourself to me - don't be shy, I'm quite friendly. :D I always believe
+superheroes are Spiderman, The Flash and Batman.</p><p>I also love watching animes. Some of my favorite ones are Full Metal Alchemist, Death Note, Dragon Ball Z, 
+Attack on Titan and One Punch Man.</p><p>I also like reading awesome fictional novels with great plot twists. I am a huge fan of Harry Potter (I'm a Ravenclaw 
+btw).</p><p>So that's me! Please do introduce yourself to me - don't be shy, I'm quite friendly. :D I always believe
 all social interaction is awkward anyways (especially first ones), so it really doesn't matter; just
-strike a conversation and go! :D</p></body></html>
+strike a conversation and go! :D</p></article></div><!-- Footer--></body><footer class="page-footer font-small"><!-- Footer Links--><div class="container"><!-- First row--><div class="row"><!-- First column--><div class="col-md-12 py-5 text-center icons-padding"><!-- Facebook--><a href="https://www.facebook.com/danyal.94" class="fb-ic"><i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a><!-- Twitter--><a href="https://twitter.com/danyal_s_94" class="tw-ic"><i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a><!-- Google +--><a href="https://plus.google.com/+DanyalSoomro" class="gplus-ic"><i class="fa fa-google-plus fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a><!-- Linkedin--><a href="https://www.linkedin.com/in/danyal-soomro/" class="li-ic"><i class="fa fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a><!-- Instagram--><a href="https://www.instagram.com/danyal.soomro/" class="ins-ic"><i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i></a></div><!-- /First column--></div><!-- /First row--></div><!-- /Footer Links--><!-- Copyright--><div class="container"><div class="row"><div class="col-lg-12 py-3 text-center">© 2018 Copyright:<a href="danyal-s.github.io"> None really. It's a free world. :)</a><br><cite>- Danyal S.</cite></div></div></div><!-- /Copyright--></footer><!-- /Footer--></html>
